gccida/g1/convert_for_assignment
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/convert_for_assignment/src/c-typeck.c:4485:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v13; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/convert_for_assignment/src/c-typeck.c:4486:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v14; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/convert_for_assignment/src/c-typeck.c:4487:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v15; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/convert_for_assignment/src/c-typeck.c:4514:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v42; // r15 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/convert_for_assignment/src/c-typeck.c:4734:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v22.rtwint = ( __int64)rtl->fld[0]; 
                       ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/convert_for_assignment/src/c-typeck.c:4880:21: error: expected expression
if ( *( tree_node **)( *( _QWORD *)( low + 8) + 8LL) != v14 ) 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/convert_for_assignment/src/c-typeck.c:4880:9: error: use of undeclared identifier 'tree_node'
if ( *( tree_node **)( *( _QWORD *)( low + 8) + 8LL) != v14 ) 
        ^
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/convert_for_assignment/src/obj/c-typeck.o] Error 1
